@@ -193,6 +193,7 @@ NATIVECCLIBS=@nativecclibs@
 SYSTHREAD_SUPPORT=@systhread_support@
 PACKLD=@PACKLD@
 IFLEXDIR=@iflexdir@
+FLEXDLL_CHAIN=@flexdll_chain@
 EXTRALIBS=@extralibs@
 CCOMPTYPE=@ccomptype@
 TOOLCHAIN=@toolchain@
@@ -262,11 +263,9 @@ ifeq "$(UNIX_OR_WIN32)" "win32"
   FIND=/usr/bin/find
   SORT=/usr/bin/sort
   SET_LD_PATH=PATH="$(PATH):$(LD_PATH)"
-  FLEXLINK_CMD=flexlink
   MKEXE_ANSI=$(FLEXLINK) -exe
-  FLEXDLL_CHAIN=@flexdll_chain@
-  # FLEXLINK_FLAGS must be safe to insert in an OCaml string
-  #   (see ocamlmklibconfig.ml in tools/Makefile)
-  FLEXLINK_FLAGS=@flexlink_flags@
-  FLEXLINK=$(FLEXLINK_CMD) $(FLEXLINK_FLAGS)
 endif # ifeq "$(UNIX_OR_WIN32)" "win32"
+
+FLEXLINK_FLAGS=@flexlink_flags@
+FLEXLINK_CMD=flexlink
+FLEXLINK=$(FLEXLINK_CMD) $(FLEXLINK_FLAGS)
